--- a/src/main/resources/templates/fragments/import.html
+++ b/src/main/resources/templates/fragments/import.html
@@ -8,8 +8,8 @@
 
 <div th:fragment="import">
 	<!-- Latest compiled and minified CSS -->
-	<link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.css}" />
-	<link type="text/css" rel="stylesheet" th:href="@{/css/font-awesome.css}"/>
+	<link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link type="text/css" rel="stylesheet" th:href="@{/css/font-awesome.min.css}"/>
 	<link type="text/css" rel="stylesheet" th:href="@{/css/style.css}" />
 </div>
 </head>
