--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -48,7 +48,7 @@
 		<div class="row">
 			<form th:action="@{/user/new}" method="post" class="form-inline">
 				<fieldset>
-					<legend class="legend">Create User:</legend>
+					<legend class="legend">Create User: (DOES NOT WORK YET...)</legend>
 					<div class="input">
 						<input type="text" placeholder="Name" name="firstname" /> <span><i
 							class="fa fa-user"></i></span>
